fixed overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
+body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.vidage {
+    overflow: hidden;
+    position: relative;
+}
+
 .vidage::before {
     content: "";
     display: block;
@@ -6,7 +17,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../images/fallback.jpg'); /* Adjust the path if necessary */
     background-size: cover;
     background-position: center;
     z-index: -1;
@@ -36,6 +46,5 @@
 /* icon size */
 .description a i {
     font-size: 48px;
-
     color: white;
 }
